--- a/index.html
+++ b/index.html
@@ -26,11 +26,24 @@
 
     </header>
     <main>
-        <div>
-            <img src="banner.jpg" alt="banner">
-            <h1>Seja bem vindo ao banco 90</h1>
-            <p>Você encontra o melhor serviço e atendimento do Brasil</p>
-        </div>
+        <section id="banner">
+            <div id="bannerTexto">
+                <h1>Seja bem vindo ao banco 90!</h1>
+                <p>Aqui você encontra melhor serviço e atendimento do Brasil.</p>
+            </div>
+
+            <div id="inscricao">
+                
+            </div>
+        </section>
+        <section id="pagamentoPr">
+            <div id="tiposDePagamento">
+                <div class="pagamento"></div>
+                <div class="pagamento"></div>
+                <div class="pagamento"></div>
+            </div>
+        </section>
+            
     </main>
     <footer></footer>
 </body>
